--- a/PHP_ASSIGNMENT01/public_html/CSS/Gallery.css
+++ b/PHP_ASSIGNMENT01/public_html/CSS/Gallery.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    height: 2000px;
+    height: 2500px;
     font-family: poppins, sans-serif;
 }
 
@@ -10,7 +10,7 @@ body{
     position: absolute;
     width: 100%;
     height: 600px;
-   /* background-image : url(../RES/home-1-slide-1.jpg); */
+    background-image : url(../RES/home-1-slide-1.jpg); 
     object-fit: scale-down;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -124,7 +124,7 @@ ul li:hover ul li{
     margin-top: 600px;
     background-color: rgb(0,89,171);
     width: 100%;
-    height: 960px;
+    height: 1760px;
 }
 
 #evt1{
@@ -231,9 +231,9 @@ ul li:hover ul li{
 #ex-evt2{
     position: absolute;
     height: 451px;
-    width: 49.3%;
+    width: 49%;
     margin-top: 505px;
-    margin-left: 50.3%;
+    margin-left: 50%;
     opacity: 0.9;
 
 }
@@ -289,13 +289,13 @@ a img {
 }
 
 .photo-album {
-    position: absolute;
+    position: relative;
     width: 80%;
-    margin-top:  100px;
+    margin: 10 auto;
     margin-left: 300px;
     max-width: 70em;
     height: 450px;
-    margin-top: 5em;
+    margin-top: 1100px;
     min-width: 800px;
     max-width: 900px;
 }
@@ -304,31 +304,31 @@ a img {
 }
 
 .photo-album .small {
-    width: 75px;
+    width: 150px;
     padding: 6px 6px 12px 6px;
     font-size: 0.6em;
 }
 .photo-album .small img {
-    width: 75px;
-    height: 75px;
+    width: 150px;
+    height: 150px;
 }
 .photo-album .medium {
-    width: 200px;
+    width: 250px;
     padding: 13px 13px 26px 13px;
     font-size: 0.8em;
 }
 .photo-album .medium img {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
 }
 .photo-album .large {
-    width: 300px;
+    width: 350px;
     padding: 20px 20px 30px 20px;
     font-size: 1em;
 }
 .photo-album .large img {
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
 }
 .photo-album .img1 {
     bottom: 10px;
@@ -388,14 +388,15 @@ a img {
 }
 .photo-album .img9 {
     bottom: 0;
-    left: 0;
+    /*left: 0;*/
+    right: 750px;
     -webkit-transform: rotate(-8deg);
     -moz-transform: rotate(-8deg);
     transform: rotate(-8deg);
 }
 .photo-album .img10 {
-    top: 0;
-    left: 20px;
+    top: -10px;
+    left: 0px;
     -webkit-transform: rotate(8deg);
     -moz-transform: rotate(8deg);
     transform: rotate(8deg);
